--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="h-screen bg-gradient-to-b from-gray-100 to-blue-50 flex flex-1 flex-col" id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
